welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: T is already defined as variable T
var T = new Array[Int](getMondeHauteur())
    ^Array1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var T:Array[Int]
    ^