welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T:Array[Int]
var T = new Array[Int](getMondeHauteur())
for (i <- 0 to T.length-1) {
  T(i) = i+1
}
}
